# smart-home-refactoring-python-kata

./: Makefile  README.md  pyproject.toml  smart_home.py  test_smart_home.py
